Bug 1618400 - Fix unused variable 'getauxval' on OpenBSD/arm64 r=jcj

https://bugzilla.mozilla.org/show_bug.cgi?id=1618400

--HG--
extra : amend_source : a8165841f572577ba4d18714ff9b89336414eb01